<resources>
    <string name="app_name">WorkoutLog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="firstname">FirstName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="lastname">LastName</string>
    <string name="track">track</string>
    <string name="profile">profile</string>
    <string name="plan">plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_fragment">Plan Fragment</string>
    <string name="track_fragment">Track Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
</resources>